<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ActividadPrincipal">
    <!--<item android:id="@+id/action_añadir" android:title="@string/action_añadir"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <!--<item android:id="@+id/action_ordenarDes" android:title="@string/action_ordenardes"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <!--<item android:id="@+id/action_ordenarAsc" android:title="@string/action_ordenarasc"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/setCopiaSeguridad" android:title="@string/set_copia"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/getCopiaSeguridad" android:title="@string/get_copia"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sincronizarIncremental" android:title="@string/sincronizar_Incremental"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sincronizar" android:title="@string/sincronizar"
        android:orderInCategory="100" app:showAsAction="never" />
    </menu>
